# openmm-plumed

./: CMakeLists.txt
openmmapi/include/: PlumedForce.h
openmmapi/src/: PlumedForce.cpp  PlumedForceImpl.cpp
python/: CMakeLists.txt  plumedplugin.i  setup.py
